Fix CtaBlock so that it is adaptable with smaller devices and doesn't overlap hero image in sm device. Along with a small fix of the nav bar not showing at exactly 640px

--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -437,7 +437,7 @@ a.inline-link{
 
 @media screen and (max-width: 768px) {
   .landing-cta-headline {
-      font-size: 14px;
+      font-size: 15px;
       margin-right: 0;
   }
   .cta-button {
